--- a/stylus-guide/style/index.styl
+++ b/stylus-guide/style/index.styl
@@ -5,3 +5,13 @@ a.button
   -webkit-border-radius 5px
   -moz-border-radius 5px
   border-radius 5px
+
+.box
+  position absolute
+  background pink
+  top 50%
+  left 50%
+  width 150px
+  height 80px
+  margin-left -(@width / 2)
+  margin-top -(@height / 2)
