--- a/webpack-vue-custom/src/assets/index.less
+++ b/webpack-vue-custom/src/assets/index.less
@@ -1,6 +1,9 @@
-body div {
-  width: 100%;
-  height: 80px;
-  display: flex;
-  color: aquamarine;
+* {
+  margin: 0;
+  padding: 0;
+  background-image: url('./img/timg.jpg')
+}
+
+body {
+  color: darkgoldenrod;
 }
