webpack 配置优化 之 优化打包速度

--- a/webpack-vue-custom/src/assets/index.less
+++ b/webpack-vue-custom/src/assets/index.less
@@ -1,7 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  background-image: url('./img/timg.jpg')
+  // background-image: url('./img/bg.jpg');
+  background: #f9f9f9;
 }
 
 body {
